added market section

--- a/index.html
+++ b/index.html
@@ -216,6 +216,166 @@
   </div>
 </section>
 
+
+<section class="py-24 bg-black">
+  <div class="max-w-7xl mx-auto px-6">
+
+   <div class="max-w-6xl mt-5 text-center">
+        <h2 class="text-4xl md:text-5xl font-semibold text-white mb-6">
+        Seize Your Next  <span class="text-green-400">Big Trade</span>
+        </h2>
+
+        <p class="max-w-2xl mx-auto text-gray-400 text-lg leading-relaxed">
+        Stay ahead of the market with real-time data on top crypto trading pairs. Make informed decisions
+        and capitalize on emerging opportunities.
+        </p>
+   </div>
+    <div class="grid grid-cols-1 lg:grid-cols-3 mt-12 gap-6">
+
+      <!-- LEFT PANEL -->
+      <div class="lg:col-span-2 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-xl p-6">
+
+        <!-- Tabs -->
+        <div class="flex items-center gap-6 text-sm mb-6">
+          <button class="text-white font-medium">Hot Spot</button>
+          <button class="text-gray-400 hover:text-white">Hot Futures</button>
+          <button class="text-gray-400 hover:text-white">New Listings</button>
+        </div>
+
+        <!-- Header -->
+        <div class="grid grid-cols-6 text-xs text-gray-400 pb-3 border-b border-white/10">
+          <div class="col-span-2">Trading Pairs</div>
+          <div>Last Price</div>
+          <div>24h Change</div>
+          <div>Chart</div>
+          <div class="text-right">Action</div>
+        </div>
+
+   
+        <div id="market-rows" class="divide-y divide-white/5"></div>
+
+
+  
+
+      </div>
+
+      <!-- RIGHT PANEL -->
+   <div class="rounded-2xl border border-white/10 bg-white/5 backdrop-blur-xl p-6">
+
+  <div class="flex items-center justify-between mb-6">
+    <h3 class="text-white font-medium">Onchain Activity</h3>
+    <span class="text-gray-400 text-sm">Live</span>
+  </div>
+
+  <div class="space-y-4 text-sm">
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-purple-500 to-pink-500 flex items-center justify-center text-xs font-medium text-white">
+          AR
+        </div>
+        <span class="text-white">Arjun.eth</span>
+      </div>
+      <span class="text-green-400">+12.4%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-blue-500 to-cyan-500 flex items-center justify-center text-xs font-medium text-white">
+          LK
+        </div>
+        <span class="text-white">lucas_k</span>
+      </div>
+      <span class="text-green-400">+8.9%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-green-500 to-emerald-500 flex items-center justify-center text-xs font-medium text-white">
+          MN
+        </div>
+        <span class="text-white">minh.ng</span>
+      </div>
+      <span class="text-green-400">+21.7%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-yellow-500 to-orange-500 flex items-center justify-center text-xs font-medium text-white">
+          JS
+        </div>
+        <span class="text-white">jason.sol</span>
+      </div>
+      <span class="text-green-400">+5.3%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-rose-500 to-red-500 flex items-center justify-center text-xs font-medium text-white">
+          NK
+        </div>
+        <span class="text-white">nik_kapoor</span>
+      </div>
+      <span class="text-green-400">+18.1%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-indigo-500 to-violet-500 flex items-center justify-center text-xs font-medium text-white">
+          YT
+        </div>
+        <span class="text-white">yuto.tx</span>
+      </div>
+      <span class="text-green-400">+9.6%</span>
+    </div>
+
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="w-8 h-8 rounded-full bg-gradient-to-br from-slate-500 to-gray-600 flex items-center justify-center text-xs font-medium text-white">
+          EM
+        </div>
+        <span class="text-white">emma_w</span>
+      </div>
+      <span class="text-green-400">+14.2%</span>
+    </div>
+
+   <div class="flex items-center justify-between">
+  <div class="flex items-center gap-3">
+    <div class="w-8 h-8 rounded-full bg-gradient-to-br from-teal-500 to-cyan-600 flex items-center justify-center text-xs font-medium text-white">
+      RK
+    </div>
+    <span class="text-white">rahul.k</span>
+  </div>
+  <span class="text-green-400">+11.8%</span>
+</div>
+
+<div class="flex items-center justify-between">
+  <div class="flex items-center gap-3">
+    <div class="w-8 h-8 rounded-full bg-gradient-to-br from-fuchsia-500 to-purple-600 flex items-center justify-center text-xs font-medium text-white">
+      AL
+    </div>
+    <span class="text-white">alex.liu</span>
+  </div>
+  <span class="text-green-400">+6.4%</span>
+</div>
+
+    
+  </div>
+
+  <!-- SEE MORE BUTTON -->
+  <div class="mt-6">
+    <button class="w-full py-2.5 rounded-xl border border-white/15 bg-white/5 backdrop-blur-md text-sm text-gray-300 hover:text-white hover:border-white/30 transition">
+      See more activity
+    </button>
+  </div>
+
+</div>
+
+
+    </div>
+  </div>
+</section>
+
   <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
@@ -225,5 +385,6 @@
     });
   </script>
   <script src="./assets/js/fan-cards.js"></script>
+  <script src="./assets/js/market-data.js"></script>
 </body>
 </html>
