--- a/index.html
+++ b/index.html
@@ -215,9 +215,138 @@
     </div>
   </div>
 </section>
+<section class="py-28 ">
+  <div class="max-w-6xl mx-auto px-6">
+
+    <!-- Heading -->
+    <div class="text-center mb-16">
+      <h2 class="text-4xl md:text-5xl font-semibold text-white mb-4">
+        A safety layer for Bitcoin holders.
+      </h2>
+      <p class="max-w-2xl mx-auto text-gray-400 text-lg">
+        Built to reduce volatility, not to trade.  
+        Every component exists to protect long-term Bitcoin holders from short-term damage.
+      </p>
+    </div>
+
+    <!-- Cards Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-px rounded-3xl overflow-hidden border border-white/10 bg-white/5">
+
+      <!-- CARD 1 -->
+      <div class="p-8 bg-black">
+        <h3 class="text-white font-medium mb-2">
+          Daily exposure check
+        </h3>
+        <p class="text-sm text-gray-400 mb-6">
+          Once per day, the system reviews your Bitcoin exposure.
+          There is no constant monitoring, no reaction to noise,
+          and no intraday activity.
+        </p>
+
+        <div class="flex justify-center mb-8">
+          <img src="assets/img/frame1.png" class="w-44 opacity-90" />
+        </div>
+
+        <div class="flex justify-between text-sm">
+          <div>
+            <p class="text-white font-medium">Once daily</p>
+            <p class="text-gray-400 text-xs">Check frequency</p>
+          </div>
+          <div>
+            <p class="text-white font-medium">Rule-based</p>
+            <p class="text-gray-400 text-xs">No discretion</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CARD 2 -->
+      <div class="p-8 bg-black">
+        <h3 class="text-white font-medium mb-2">
+          Controlled inverse hedge
+        </h3>
+        <p class="text-sm text-gray-400 mb-6">
+          When risk increases, a small inverse BTCUSD perpetual
+          hedge is opened on Bybit. When Bitcoin falls, the hedge
+          offsets losses. When Bitcoin rises, your BTC still rises.
+        </p>
+
+        <div class="flex justify-center mb-8">
+          <img src="assets/img/frame2.png" class="w-44 opacity-90" />
+        </div>
+
+        <div class="flex justify-between text-sm">
+          <div>
+            <p class="text-white font-medium">BTCUSD Perpetual</p>
+            <p class="text-gray-400 text-xs">Instrument used</p>
+          </div>
+          <div>
+            <p class="text-white font-medium">Small size</p>
+            <p class="text-gray-400 text-xs">Risk-limited hedge</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CARD 3 -->
+      <div class="p-8 bg-black">
+        <h3 class="text-white font-medium mb-2">
+          No panic, no bots
+        </h3>
+        <p class="text-sm text-gray-400 mb-6">
+          The system does not day trade, chase profit,
+          or react emotionally. If no adjustment is needed,
+          nothing happens. Silence is intentional.
+        </p>
+
+        <div class="flex justify-center mb-8">
+          <img src="assets/img/frame3.png" class="w-44 opacity-90" />
+        </div>
+
+        <div class="flex justify-between text-sm">
+          <div>
+            <p class="text-white font-medium">Zero</p>
+            <p class="text-gray-400 text-xs">Intraday trades</p>
+          </div>
+          <div>
+            <p class="text-white font-medium">Risk control</p>
+            <p class="text-gray-400 text-xs">Not speculation</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CARD 4 -->
+      <div class="p-8 bg-black">
+        <h3 class="text-white font-medium mb-2">
+          Everything stays in Bitcoin
+        </h3>
+        <p class="text-sm text-gray-400 mb-6">
+          Margin in BTC. PnL in BTC. No conversion to stablecoins.
+          Your hedge speaks the same language as your asset.
+          Simple, clean, aligned.
+        </p>
+
+        <div class="flex justify-center mb-8">
+          <img src="assets/img/frame4.png" class="w-44 opacity-90" />
+        </div>
+
+        <div class="flex justify-between text-sm">
+          <div>
+            <p class="text-white font-medium">BTC only</p>
+            <p class="text-gray-400 text-xs">Margin & PnL</p>
+          </div>
+          <div>
+            <p class="text-white font-medium">No USDT</p>
+            <p class="text-gray-400 text-xs">No conversions</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
 
 
-<section class="py-24 bg-black">
+<section class="py-24">
   <div class="max-w-7xl mx-auto px-6">
 
    <div class="max-w-6xl mt-5 text-center">
