--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
 
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
-  <style>
-    body {
-      font-family: 'Archivo', sans-serif;
-      background-color: #050505;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css">
+ 
 </head>
 
 <body class="text-gray-200 overflow-x-hidden">
@@ -216,7 +211,7 @@
   </div>
 </section>
 <section class="py-28 ">
-  <div class="max-w-6xl mx-auto px-6">
+  <div class="max-w-7xl mx-auto px-6">
 
     <!-- Heading -->
     <div class="text-center mb-16">
@@ -233,7 +228,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-px rounded-3xl overflow-hidden border border-white/10 bg-white/5">
 
       <!-- CARD 1 -->
-      <div class="p-8 bg-black">
+      <div class="p-8 ">
         <h3 class="text-white font-medium mb-2">
           Daily exposure check
         </h3>
@@ -344,6 +339,95 @@
 
   </div>
 </section>
+
+
+<section class="py-28  relative overflow-hidden">
+  <div class="max-w-6xl mx-auto px-6">
+
+    <!-- Heading -->
+    <div class="text-center mb-20">
+      <h2 class="text-4xl md:text-5xl font-semibold text-white mb-4">
+        No black box.
+      </h2>
+      <p class="max-w-2xl mx-auto text-gray-400 text-lg leading-relaxed">
+        Every action is visible. Every decision is explainable.
+        Nothing happens quietly in the background.
+      </p>
+    </div>
+
+    <!-- Glass Console -->
+    <div class="relative rounded-3xl border border-white/10 bg-white/5 backdrop-blur-2xl shadow-[0_40px_120px_rgba(0,0,0,0.7)]">
+
+      <!-- Top bar -->
+      <div class="flex items-center justify-between px-6 py-4 border-b border-white/10">
+        <span class="text-sm text-gray-400">System transparency</span>
+        <span class="text-xs text-green-400">Live visibility</span>
+      </div>
+
+      <!-- Rows -->
+      <div class="divide-y divide-white/10">
+
+        <div class="flex flex-col md:flex-row md:items-center justify-between px-6 py-6 gap-4">
+          <div>
+            <p class="text-white font-medium">Hedge level</p>
+            <p class="text-gray-400 text-sm">
+              You always see how much protection is active, and why.
+            </p>
+          </div>
+          <span class="text-green-400 text-sm">
+            Exposed at all times
+          </span>
+        </div>
+
+        <div class="flex flex-col md:flex-row md:items-center justify-between px-6 py-6 gap-4">
+          <div>
+            <p class="text-white font-medium">Costs & fees</p>
+            <p class="text-gray-400 text-sm">
+              Funding, fees, and impact are shown clearly. No hidden drag.
+            </p>
+          </div>
+          <span class="text-green-400 text-sm">
+            Fully itemized
+          </span>
+        </div>
+
+        <div class="flex flex-col md:flex-row md:items-center justify-between px-6 py-6 gap-4">
+          <div>
+            <p class="text-white font-medium">Alerts & adjustments</p>
+            <p class="text-gray-400 text-sm">
+              If the system acts, you are notified. If it doesn’t, you know why.
+            </p>
+          </div>
+          <span class="text-green-400 text-sm">
+            Always notified
+          </span>
+        </div>
+
+        <div class="flex flex-col md:flex-row md:items-center justify-between px-6 py-6 gap-4">
+          <div>
+            <p class="text-white font-medium">Audit trail</p>
+            <p class="text-gray-400 text-sm">
+              You can see exactly what the system did, and what it chose not to do.
+            </p>
+          </div>
+          <span class="text-green-400 text-sm">
+            Nothing hidden
+          </span>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Bottom reassurance -->
+    <div class="mt-12 text-center">
+      <p class="text-gray-500 text-sm">
+        Transparency is not a feature here. It’s the default.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 
 
 <section class="py-24">
@@ -514,8 +598,197 @@
   </div>
 </section>
 
+
+<section id="cta-trust-layer" class="relative py-28 ">
+  <div class="max-w-7xl mx-auto px-6">
+
+    <div class="rounded-3xl border border-white/10 bg-white/5 backdrop-blur-2xl px-8 py-16 text-center">
+
+      <!-- Heading -->
+      <h1 class="text-3xl md:text-4xl font-semibold text-white mb-4">
+        Built with long-term Bitcoin holders in mind.
+      </h1>
+
+      <!-- Subtext -->
+      <p class="max-w-2xl mx-auto text-gray-400 text-lg leading-relaxed mb-10">
+        Used by independent traders, builders, and small teams who prefer
+        risk control over constant speculation.
+      </p>
+
+      <!-- CTA -->
+      <div class="flex justify-center  mb-12">
+       <button class="nbb-cta-btn group relative">
+            <span class="nbb-cta-border"></span>
+
+            <span class="nbb-cta-inner">
+                Join the waitlist
+            </span>
+            </button>
+
+      </div>
+
+      <!-- Logos -->
+     <div class="nbb-marquee relative overflow-hidden mt-6">
+    <div class="nbb-marquee-track">
+        <!-- set 1 -->
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+
+        <!-- set 2 (duplicate for seamless loop) -->
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+        <img src="assets/img/lorem_logo.svg" class="nbb-logo" alt="logo" />
+    </div>
+    </div>
+
+
+    </div>
+
+  </div>
+</section>
+
+
+<section id="nbb-contact" class="py-32">
+  <div class="max-w-7xl mx-auto px-6">
+
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-start">
+
+      <!-- LEFT CONTENT -->
+      <div>
+        <h2 class="text-4xl md:text-5xl font-semibold text-white mb-6 leading-tight">
+          Ready for a calmer<br>
+          way to manage Bitcoin risk?
+        </h2>
+
+        <p class="text-gray-400 text-lg leading-relaxed max-w-md">
+          Share a few details below. We’ll review your setup and get back
+          to you if this system is a good fit.
+        </p>
+
+        <p class="mt-6 text-sm text-gray-500">
+          No spam. No sales pressure. Just a conversation.
+        </p>
+      </div>
+
+      <!-- FORM -->
+      <form class="space-y-6">
+
+        <!-- Name -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Full Name
+          </label>
+          <input
+            type="text"
+            placeholder="Your full name"
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-green-400/60"
+          />
+        </div>
+
+        <!-- Email -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Email Address
+          </label>
+          <input
+            type="email"
+            placeholder="you@example.com"
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-green-400/60"
+          />
+        </div>
+
+        <!-- Contact Number -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Contact Number
+          </label>
+          <input
+            type="tel"
+            placeholder="+1 234 567 890"
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-green-400/60"
+          />
+        </div>
+
+        <!-- Country -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Country
+          </label>
+          <input
+            type="text"
+            placeholder="Your country"
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-green-400/60"
+          />
+        </div>
+
+        <!-- Risk Exposure Type -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Risk Exposure Type
+          </label>
+          <select
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white focus:outline-none focus:border-green-400/60"
+          >
+            <option value="">Select exposure type</option>
+            <option>Long-term BTC holding</option>
+            <option>BTC used as collateral</option>
+            <option>Mixed portfolio exposure</option>
+            <option>Other</option>
+          </select>
+        </div>
+
+        <!-- Exposure Size -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Exposure Size (Approx)
+          </label>
+          <select
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white focus:outline-none focus:border-green-400/60"
+          >
+            <option value="">Select range</option>
+            <option>&lt; 1 BTC</option>
+            <option>1 – 5 BTC</option>
+            <option>5 – 10 BTC</option>
+            <option>10+ BTC</option>
+          </select>
+        </div>
+
+        <!-- Message -->
+        <div>
+          <label class="block text-sm text-gray-400 mb-2">
+            Message
+          </label>
+          <textarea
+            rows="4"
+            placeholder="Anything you’d like us to know"
+            class="w-full rounded-xl bg-white/5 border border-white/10 px-4 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-green-400/60 resize-none"
+          ></textarea>
+        </div>
+
+        <!-- Submit -->
+        <div class="pt-4">
+          <button
+            type="submit"
+            class="w-full rounded-2xl px-6 py-4 font-medium text-black bg-gradient-to-br from-green-400 to-emerald-500 hover:shadow-[0_20px_60px_rgba(34,197,94,0.4)] transition"
+          >
+            Send Message
+          </button>
+        </div>
+
+      </form>
+
+    </div>
+  </div>
+</section>
+
   <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  
   <script>
     AOS.init({
       once: true,
@@ -523,6 +796,7 @@
     });
   </script>
   <script src="./assets/js/fan-cards.js"></script>
+
   <script src="./assets/js/market-data.js"></script>
 </body>
 </html>
