--- a/index.html
+++ b/index.html
@@ -929,6 +929,21 @@
     </div>
   </div>
 </section>
+<footer class="site-footer">
+  <div class="footer-inner">
+
+    <div class="footer-brand">
+      HedgeBTC <span>×</span> Exonoma
+    </div>
+
+    <div class="footer-bottom">
+      <span>© 2026 HedgeBTC</span>
+      <span>Legal · Cookies</span>
+    </div>
+
+  </div>
+</footer>
+
 
   <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
@@ -940,7 +955,7 @@
     });
   </script>
   <script src="./assets/js/fan-cards.js"></script>
-  <script src="./assets/js/faq.js"></script>
+  <script src="./assets/js/faq.js"></script>    
   <script src="./assets/js/market-data.js"></script>
 </body>
 </html>
