--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 
 
 
-<section id="nbb-contact" class="py-32">
+<section id="contact" class="py-32">
   <div class="max-w-7xl mx-auto px-6">
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-start">
